<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/mainGreeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/defaultMargin"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginTop="@dimen/defaultMargin"
            android:text="@string/mainGreeting"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/defaultMargin"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:background="@drawable/textbox"
            android:padding="4dp"
            android:maxLength="32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainGreeting" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/defaultMargin"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginTop="@dimen/defaultMargin"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/textbox"
            android:padding="4dp"
            android:maxLength="32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/defaultMargin"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginTop="@dimen/defaultMargin"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:background="@drawable/textbox"
            android:padding="4dp"
            android:maxLength="32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/birthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/defaultMargin"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginTop="@dimen/defaultMargin"
            android:text="@string/birth_date"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userName" />

        <Spinner
            android:id="@+id/month"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/defaultMargin"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginTop="@dimen/defaultMargin"
            android:entries="@array/month"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birthdate" />

        <Spinner
            android:id="@+id/day"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/spinnerMargin"
            android:layout_marginStart="@dimen/spinnerMargin"
            android:layout_marginTop="@dimen/defaultMargin"
            android:entries="@array/day"
            app:layout_constraintStart_toEndOf="@+id/month"
            app:layout_constraintTop_toBottomOf="@+id/birthdate" />

        <Spinner
            android:id="@+id/year"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/spinnerMargin"
            android:layout_marginStart="@dimen/spinnerMargin"
            android:layout_marginTop="@dimen/defaultMargin"
            app:layout_constraintStart_toEndOf="@+id/day"
            app:layout_constraintTop_toBottomOf="@+id/birthdate" />

        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/defaultMargin"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/defaultMargin"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginTop="16dp"
            android:text="@string/submit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error" />

        <TextView
            android:id="@+id/signature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/defaultMargin"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginTop="@dimen/defaultMargin"
            android:text="@string/signature"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submit" />

        <TextView
            android:id="@+id/nameFlag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defaultMargin"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintStart_toEndOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/mainGreeting" />

        <TextView
            android:id="@+id/emailFlag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defaultMargin"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintStart_toEndOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/userNameFlag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defaultMargin"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/userName"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <EditText
            android:id="@+id/occupation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/defaultMargin"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginTop="@dimen/defaultMargin"
            android:ems="10"
            android:hint="@string/occupation"
            android:inputType="textPersonName"
            android:background="@drawable/textbox"
            android:padding="4dp"
            android:maxLength="32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/month" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/defaultMargin"
            android:ems="10"
            android:hint="@string/description"
            android:background="@drawable/textbox"
            android:inputType="textMultiLine"
            android:gravity="top|left"
            android:minLines="3"
            android:maxLines="5"
            android:padding="4dp"
            android:maxLength="500"
            android:scrollbars = "vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/occupation" />

        <TextView
            android:id="@+id/occupationFlag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defaultMargin"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintStart_toEndOf="@+id/occupation"
            app:layout_constraintTop_toBottomOf="@+id/month" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>