<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_manage" />

    <TextView
        android:id="@+id/reminderTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/reminder_time"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Spinner
        android:id="@+id/hour"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminderTime"
        android:entries="@array/hours"/>

    <Spinner
        android:id="@+id/minute"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/hour"
        app:layout_constraintTop_toBottomOf="@+id/reminderTime"
        android:entries="@array/minutes"/>

    <Spinner
        android:id="@+id/meridiem"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/minute"
        app:layout_constraintTop_toBottomOf="@+id/reminderTime"
        android:entries="@array/meridiem"/>

    <TextView
        android:id="@+id/searchRadius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/search_radius"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hour"
        />

    <Spinner
        android:id="@+id/radius"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchRadius"
        android:entries="@array/radius"/>

    <TextView
        android:id="@+id/howDoYouIdentify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/how_do_you_identify"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radius" />

    <Spinner
        android:id="@+id/sexuality"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/howDoYouIdentify"
        android:entries="@array/sexuality"/>

    <Spinner
        android:id="@+id/gender"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/sexuality"
        app:layout_constraintTop_toBottomOf="@+id/howDoYouIdentify"
        android:entries="@array/gender"/>

    <TextView
        android:id="@+id/ageRange"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/age_range"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexuality" />

    <Spinner
        android:id="@+id/rangeLow"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageRange" />

    <TextView
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/to"
        app:layout_constraintStart_toEndOf="@+id/rangeLow"
        app:layout_constraintTop_toBottomOf="@+id/ageRange" />

    <Spinner
        android:id="@+id/rangeHigh"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/to"
        app:layout_constraintTop_toBottomOf="@+id/ageRange" />

    <Switch
        android:id="@+id/privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/set_profile_to_private"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rangeLow" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/privacy" />

    <TextView
        android:id="@+id/settingsError"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/red"
        app:layout_constraintStart_toEndOf="@+id/save"
        app:layout_constraintTop_toBottomOf="@+id/privacy" />
</android.support.constraint.ConstraintLayout>