...
            android:ellipsize="end"
            android:singleLine="true"
            tools:layout_editor_absoluteX="0dp"
            tools:text="@string/item_desc" />

        <ImageButton
            android:id="@+id/like_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:layout_marginRight="@dimen/defaultMargin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
